removed social media buttons for screens smaller than 400px width until i figure ou thte issue with overflow

--- a/css-styles/myStyles.css
+++ b/css-styles/myStyles.css
@@ -136,13 +136,13 @@ body {
 }
 @media screen and (max-width: 400px) {
     .sidenav {
-        height: 100px;
+        height: 52px;
         overflow: scroll;
     }
     .fa {
         position: absolute !important;
         top: 50px !important;
-        display: none;
+        display: none !important;
     }
     .nav-buttons-container {
         width: 100%;
